[package]
name = "gp2"
version = "0.0.1"
license = "MPL-2.0"
edition = "2018"

[features]
default = ["webdriver", "max_log_level", "media-gstreamer", "native-bluetooth", "egl", "layout-2013"]
debugmozjs = ["libservo/debugmozjs"]
egl = ["libservo/egl"]
jitspew = ["libservo/jitspew"]
js_backtrace = ["libservo/js_backtrace"]
layout-2013 = ["libservo/layout-2013"]
layout-2020 = ["libservo/layout-2020"]
max_log_level = ["log/release_max_level_info"]
media-dummy = ["libservo/media-dummy"]
media-gstreamer = ["libservo/media-gstreamer"]
native-bluetooth = ["libservo/native-bluetooth"]
no-wgl = ["libservo/no-wgl"]
profilemozjs = ["libservo/profilemozjs"]
refcell_backtrace = ["libservo/refcell_backtrace"]
webdriver = ["libservo/webdriver"]
webgl_backtrace = ["libservo/webgl_backtrace"]
# webrender_debugger = ["libservo/webrender_debugger"]
xr-profile = ["libservo/xr-profile"]

[target.'cfg(not(target_os = "android"))'.dependencies]
backtrace = "0.3"
clipboard = "0.5"
euclid = "0.22"
getopts = "0.2.11"
keyboard-types = "0.6"
lazy_static = "1"
libc = "0.2"
# libservo = { path = "../servo/components/servo" }
libservo = { git = "https://github.com/servo/servo" }
log = "0.4"
servo-media = { git = "https://github.com/servo/media" }
shellwords = "1.0.0"
surfman = { version = "0.6", features = ["sm-winit", "sm-x11"] }
tinyfiledialogs = "=3.3"
webxr = { git = "https://github.com/servo/webxr", features = ["ipc", "glwindow", "headless"] }
winit = "0.28.3"
log-panics = { version = "2", features = ["with-backtrace"]}

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
image = "0.24"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sig = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wingdi", "winuser", "winnt", "winbase", "processenv", "namedpipeapi", "ntdef", "minwindef", "handleapi", "debugapi"] }

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }
# fork that bumps crates since the original repo is archived.
immeta = { git = "https://github.com/fabricedesre/immeta.git" }

# https://github.com/servo/servo/issues/27515#issuecomment-671474054
[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
